<resources>
    <string name="app_name">叮钉</string>
    <string name="hint_webhook">请将机器人的 webhook 地址粘贴至此</string>
    <string name="hint_title">文章标题</string>
    <string name="hint_preview_title">预览标题</string>
    <string name="hint_markdown">Markdown 文本</string>
    <string name="hint_pic_link">图片链接</string>
    <string name="hint_des">文章简介</string>
    <string name="hint_link">跳转链接</string>
    <string name="hint_text">输入想要发送的文字</string>
    <string name="send">发送</string>
    <string name="send_successful">发送成功</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
